# sawa

./: .gitignore  AGENTS.md  Cargo.toml  package.json  pnpm-lock.yaml
.cursor/rules/: always-on.mdc  ddd-principles.mdc  sawa-domain.mdc
apps/web/: .cta.json  README.md  index.html  openapi-ts.config.ts  package.json  vite.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts  styles.css  theme.ts
crates/api/: Cargo.toml
crates/api/src/: auth.rs  docs.rs  error.rs  handlers.rs  lib.rs  state.rs
crates/api/src/handlers/: auth.rs  health.rs  media.rs  product.rs  product_instance.rs  purchase_order.rs  tag.rs
crates/application/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  errors.rs  lib.rs  models.rs  repositories.rs  services.rs
crates/core/src/models/: misc.rs  product.rs  purchase.rs  transfer.rs
crates/core/src/models/misc/: address.rs  media.rs  price.rs  primitives.rs  tag.rs
crates/core/src/models/product/: product.rs  product_instance.rs  product_variant.rs
crates/core/src/models/purchase/: purchase_order.rs  purchase_order_item.rs  purchase_order_line_item.rs  role_filter.rs
crates/core/src/models/transfer/: ownership_transfer.rs  transfer_history.rs  user_transaction.rs
crates/core/src/models/user/: user.rs
crates/core/src/repositories/: media.rs  product.rs  product_instance.rs  purchase_order.rs  tag.rs  user.rs  user_transaction.rs
crates/core/src/services/: purchase_order.rs  purchase_order_lifecycle.rs  tag.rs
crates/core/src/services/media/: errors.rs  requests.rs  trait_def.rs
crates/core/src/services/product/: errors.rs  requests.rs  trait_def.rs
crates/core/src/services/product_instance/: errors.rs  requests.rs  trait_def.rs
crates/core/src/services/purchase_order/: errors.rs  requests.rs  trait_def.rs
crates/core/src/services/purchase_order_lifecycle/: errors.rs  requests.rs  trait_def.rs
crates/core/src/services/tag/: errors.rs  requests.rs  trait_def.rs
crates/core/src/services/transaction/: errors.rs  requests.rs  trait_def.rs
crates/core/src/services/transaction_lifecycle/: errors.rs  requests.rs  trait_def.rs
crates/core/src/services/user/: errors.rs  requests.rs  trait_def.rs
crates/core/src/utils/: id.rs
crates/infra-memory/: Cargo.toml
crates/infra-postgres/: Cargo.toml  Readme.md
crates/infra-postgres/examples/: setup.rs
crates/infra-postgres/src/: entities.rs  error.rs  lib.rs  repositories.rs  traits.rs
crates/infra-postgres/src/entities/: media.rs  product.rs  product_instance.rs  product_instance_status_history.rs  product_instance_transfer_history.rs  product_variant.rs  product_variant_tag.rs  purchase_order.rs  purchase_order_item.rs  purchase_order_line_item.rs  tag.rs  user.rs  user_transaction.rs  user_transaction_item.rs
crates/infra-postgres/src/repositories/: media.rs  product.rs  product_instance.rs  purchase_order.rs  tag.rs  user.rs  user_transaction.rs
crates/infra-postgres/tests/: repositories.rs
crates/repository-tests/: Cargo.toml
(+60 files in other folders)
