[workspace]
resolver = "2"
members = ["bin/*", "crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
sawa-core = { path = "crates/core" }
sawa-application = { path = "crates/application" }
sawa-infra-memory = { path = "crates/infra-memory" }
sawa-repository-tests = { path = "crates/repository-tests" }

url = "2.5.7"
