[workspace]
resolver = "2"
members = ["bin/*", "crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
sawa-core = { path = "crates/core" }
sawa-application = { path = "crates/application" }
sawa-infra-memory = { path = "crates/infra-memory" }
sawa-infra-postgres = { path = "crates/infra-postgres" }
sawa-repository-tests = { path = "crates/repository-tests" }

url = "2.5.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bcrypt = "0.15"
