[package]
name = "sawa-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
sawa-core.workspace = true
sawa-application.workspace = true

axum.workspace = true
aide.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing = "0.1"
uuid.workspace = true
axum-login = "0.18.0"
time = "0.3.44"
