[package]
name = "sawa-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
url.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
schemars = { workspace = true, optional = true, features = ["uuid1", "url"] }

iso_currency = { version = "0.5.3", features = ["with-serde", "with-schemars"] }

[features]
default = ["schemars"]
