[package]
name = "sawa-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
url.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
schemars = { workspace = true, optional = true }

iso_currency = { git = "https://github.com/Yesterday17/iso_currency", features = [
    "with-serde",
    "with-schemars",
] }

[features]
default = ["schemars"]
