[package]
name = "sawa-infra-postgres"
version = "0.1.0"
edition.workspace = true

[dependencies]
sawa-core.workspace = true
url.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

sea-orm = { version = "=2.0.0-rc.18", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "schema-sync",
    "entity-registry",
] }

[dev-dependencies]
sawa-repository-tests.workspace = true
tokio.workspace = true
